# enclave

./: CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md
.github/workflows/: release.yml  rust.yml
docs/: architecture.md  commands.md  configuration.md  enclavefile.md  limitations.md  roadmap.md  runtime-details.md  security.md  storage.md
scripts/: install-remote.sh  install.sh  uninstall.sh  update.sh
src/: cli.rs  client.rs  config.rs  doctor.rs  enclavefile.rs  fsutil.rs  lib.rs  main.rs  paths.rs  protocol.rs  registry.rs  resource_limits.rs
src/auth/: manager.rs  mod.rs  storage.rs
src/commands/: auth.rs  daemon.rs  enclavefile.rs  internal.rs  mod.rs  policy.rs  registry.rs  rootfs.rs  sandbox.rs  stats.rs
src/daemon/: dispatch.rs  mod.rs  rate_limiter.rs
src/logging/: format.rs  mod.rs
src/network/: bridge.rs  dns.rs  ipam.rs  mod.rs  nat.rs  publish.rs  teardown.rs  veth.rs
src/policy/: engine.rs  mod.rs  types.rs
src/sandbox/: bootstrap.rs  cgroup.rs  features.rs  lifecycle.rs  mod.rs  mounts.rs  types.rs  util.rs
src/workspace/: control.rs  create.rs  cwd.rs  exec.rs  logs.rs  mod.rs  ports.rs  ps.rs  runtime.rs  snapshot.rs  stats.rs  storage.rs  types.rs
tests/: cgroup_cleanup.rs  cli.rs  cli_help.rs  doctor_scenarios.rs  lifecycle_edges.rs  lockfile_contention.rs  network_teardown.rs  ps_command.rs  repository_layout.rs  snapshot_gc.rs  stability.rs  stress_suite.rs
tests/common/: mod.rs
tests/integration/: auth_flow.rs  lifecycle.rs  mod.rs  snapshot_and_limits.rs  tmp_isolation.rs  workspace_host_mount.rs
(+61 files in other folders)
