[package]
name = "enclave"
version = "1.0.2"
edition = "2021"
description = "Enclave Linux workspace isolation platform"
license = "MIT"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
clap = { version = "4.5", features = ["derive"] }
libc = "0.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-log = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
uuid = { version = "1.8", features = ["v4"] }
nix = { version = "0.29", features = ["mount", "sched", "socket", "process", "uio", "signal"] }
